[gd_scene load_steps=5 format=3 uid="uid://bbva8lrqpb4up"]

[ext_resource type="Texture2D" uid="uid://d205cvql3ms4w" path="res://components/background_button/background.svg" id="1_qn14c"]
[ext_resource type="StyleBox" uid="uid://b2hhpretuygh7" path="res://components/background_button/background_button.tres" id="1_yhsmn"]
[ext_resource type="StyleBox" uid="uid://ecl3gbcnx72s" path="res://components/background_button/background_button_pressed.tres" id="2_iues8"]
[ext_resource type="Script" path="res://components/background_button/background_button.gd" id="4_vrdpf"]

[node name="BackgroundButton" type="Button"]
theme_override_styles/focus = ExtResource("1_yhsmn")
theme_override_styles/disabled = ExtResource("1_yhsmn")
theme_override_styles/hover_pressed = ExtResource("1_yhsmn")
theme_override_styles/hover = ExtResource("1_yhsmn")
theme_override_styles/pressed = ExtResource("2_iues8")
theme_override_styles/normal = ExtResource("1_yhsmn")
icon = ExtResource("1_qn14c")
script = ExtResource("4_vrdpf")

[node name="BackgroundWindow" type="Window" parent="."]
transparent_bg = true
title = "Background"
initial_position = 5
size = Vector2i(500, 250)
visible = false

[node name="MarginContainer" type="MarginContainer" parent="BackgroundWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundWindow/MarginContainer"]
layout_mode = 2

[node name="ColorPickerContainer" type="HBoxContainer" parent="BackgroundWindow/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="ColorPickerLabel" type="Label" parent="BackgroundWindow/MarginContainer/VBoxContainer/ColorPickerContainer"]
layout_mode = 2
text = "Color picker: "

[node name="ColorPickerButton" type="ColorPickerButton" parent="BackgroundWindow/MarginContainer/VBoxContainer/ColorPickerContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="ColorsContainer" type="HFlowContainer" parent="BackgroundWindow/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="Colors" type="Label" parent="BackgroundWindow/MarginContainer/VBoxContainer/ColorsContainer"]
layout_mode = 2
text = "Colors: "

[node name="Default" type="Button" parent="BackgroundWindow/MarginContainer/VBoxContainer/ColorsContainer"]
layout_mode = 2
text = "Default"

[node name="Green" type="Button" parent="BackgroundWindow/MarginContainer/VBoxContainer/ColorsContainer"]
layout_mode = 2
text = "Green"

[node name="Red" type="Button" parent="BackgroundWindow/MarginContainer/VBoxContainer/ColorsContainer"]
layout_mode = 2
text = "Red"

[node name="Blue" type="Button" parent="BackgroundWindow/MarginContainer/VBoxContainer/ColorsContainer"]
layout_mode = 2
text = "Blue"

[node name="Transparent" type="Button" parent="BackgroundWindow/MarginContainer/VBoxContainer/ColorsContainer"]
layout_mode = 2
text = "Transparent"

[node name="Note" type="Label" parent="BackgroundWindow/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Colors will be 30% dark during edition"

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="close_requested" from="BackgroundWindow" to="." method="_on_window_close_requested"]
[connection signal="color_changed" from="BackgroundWindow/MarginContainer/VBoxContainer/ColorPickerContainer/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="pressed" from="BackgroundWindow/MarginContainer/VBoxContainer/ColorsContainer/Default" to="." method="_on_default_pressed"]
[connection signal="pressed" from="BackgroundWindow/MarginContainer/VBoxContainer/ColorsContainer/Green" to="." method="_on_green_pressed"]
[connection signal="pressed" from="BackgroundWindow/MarginContainer/VBoxContainer/ColorsContainer/Red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="BackgroundWindow/MarginContainer/VBoxContainer/ColorsContainer/Blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="BackgroundWindow/MarginContainer/VBoxContainer/ColorsContainer/Transparent" to="." method="_on_transparent_pressed"]
